--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,25 @@
 
+body {
+    color: #434455;
+    font-family: "Roboto", sans-serif;
+    background-color: #FFFFFF;
+}
+
+header {
+
+    font-family: "Raleway", sans-serif;
+
+}
+
+font-weight: 700 logo
+
+h1 {
+
+    color: 
+}
+
+p {
+
+    color:
+}
+
