--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,52 @@
-
-body {
-    color: #434455;
-    font-family: "Roboto", sans-serif;
-    background-color: #FFFFFF;
-}
-
-header {
-
+.partlogo {
     font-family: "Raleway", sans-serif;
-
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
 }
 
-font-weight: 700 logo
-
-h1 {
-
-    color: 
+.partlogo__studio {
+    color: #2e2f42;
 }
 
-p {
 
-    color:
+.web-studio {
+    text-decoration: none;
 }
 
+.menu li a {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 0.3s ease;
+}
+
+.menu li a:hover {
+    color: #404bbf;
+}
+
+.menu li a:focus {
+    color: #404bbf;
+}
+
+
+.contact-info li a {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 0.3s ease;
+}
+
+.contact-info li a:hover {
+    color: #404bbf;
+}
+
+.contact-info li a:focus {
+    color: #404bbf;
+}
