--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,29 @@
+.body {
+
+    font-family:"Roboto", sans-serif;
+    color: #434455;
+    background-color:#FFFFFF;
+
+}
+
+
+.web-studio {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+
+.studio {
+
+
+}
+
+
 .partlogo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -13,9 +39,6 @@
 }
 
 
-.web-studio {
-    text-decoration: none;
-}
 
 .menu li a {
     font-weight: 500;
@@ -49,4 +72,33 @@
 
 .contact-info li a:focus {
     color: #404bbf;
+}
+
+
+.top {
+    background-color:#2e2f42
+    
+}
+
+.slogan {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    
+
+    
+}
+.button{
+    background-color: #4D5AE5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff
+    cursor: pointer;
+    
+
 }
