--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,9 @@
     color: #4d5ae5;
 }
 
-
+.web-studio:hover {
+    color: #404bbf;
+}
 
 
 .partlogo {
@@ -105,8 +107,15 @@
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
-    
+}
 
+button:hover {
+    background-color: #404BBF;
+
+}
+
+button:focus {
+    background-color: #404BBF;
 }
 
 a:hover {
@@ -114,5 +123,15 @@ a:hover {
 }
 
 a:focus {
+    color: #404bbf;
+}
+
+.studmenu:hover{
+    color: #404bbf;
+}
+.portmenu:hover{
+    color: #404bbf;
+}
+.contmenu:hover{
     color: #404bbf;
 }
