--- a/css/styles.css
+++ b/css/styles.css
@@ -152,3 +152,37 @@ a:focus {
     letter-spacing: 0.02em;
     color: #434455;
 }
+
+.headh2 {
+    background-color: #F4F4FD;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+
+
+}
+
+.secondsect {
+    background-color: #FFFFFF;
+
+}
+
+
+.headteam {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+
+}
+
+.headtext {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
