--- a/css/styles.css
+++ b/css/styles.css
@@ -180,9 +180,13 @@ a:focus {
 
 }
 
-.headtext {
+.teamtext {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+}
+
+.devcast {
+    background-color: #FFFFFF
 }
