--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ a:focus {
 }
 
 .secondsect {
-    background-color: #FFFFFF;
+    background-color: #F4F4FD;
 
 }
 
@@ -189,4 +189,20 @@ a:focus {
 
 .devcast {
     background-color: #FFFFFF
+}
+
+.logoportfolio {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.textthird {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455 ;
+    
 }
