--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
-.body {
+#body {
 
     font-family:"Roboto", "sans-serif";
     color: #434455;
     background-color:#FFFFFF;
 
+}
+
+#footer {
+    background-color: #2e2f42;
+    
 }
 
 .span {
@@ -204,5 +209,5 @@ a:focus {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455 ;
-    
+
 }
