--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
-#body {
-
-    font-family:"Roboto", "sans-serif";
+body {
+    font-family: "Roboto", sans-serif;
     color: #434455;
-    background-color:#FFFFFF;
+    background-color: #FFFFFF;
+}
 
+a:link,
+a:visited,
+a:hover,
+a:active {
+    text-decoration: none;
 }
 
 #footer {
