--- a/css/styles.css
+++ b/css/styles.css
@@ -60,29 +60,45 @@ span {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    transition: color 0.3s ease;
+    
 }
+
 
 .studmenu:hover,
 .studmenu:focus {
     color: #404BBF;
 }
 
-.contacts :focus,
-.contacts :hover {
+.contacts:focus,
+.contacts:hover {
     color: #404bbf;
  }
- 
 
 
+.menu li a:hover {
+    color: #404bbf;
+}
 
+.menu li a:focus {
+    color: #404bbf;
+}
+
+.menu .studmenu:hover {
+    color: #404bbf;
+
+} 
+
+.menu .studmenu:focus {
+    color: #404bbf;
+
+}
 
 .contact-info li a {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    transition: color 0.3s ease;
+    
 }
 
 
@@ -231,8 +247,3 @@ a:focus {
 
 .partlogosecond {
     color: #f4f4fd;
-<<<<<<< HEAD
-}
-=======
-}
->>>>>>> c4edd427302642088d00d338f1ef60df895a82cd
